--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/nodemailer": "^7.0.1",
     "@vercel/analytics": "1.3.1",
     "agentmail": "^0.0.57",
     "autoprefixer": "^10.4.20",
@@ -51,9 +52,11 @@
     "lucide-react": "^0.454.0",
     "next": "^14.2.32",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
